@@ -4,6 +4,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.StringJoiner;
 import java.util.function.BiFunction;
 import java.util.function.BiPredicate;
 import java.util.function.Consumer;
@@ -24,7 +25,7 @@ public class FSMBuilder<T> {
             BiPredicate<C, T> predicate,
             BiFunction<C, T, T> processor
     ) {
-        return addTransition(action, List.of(predicate), processor);
+        return addTransition(action, List.of(predicate), Collections.singletonList(processor), Collections.emptyList());
     }
 
     public <C, A extends Action<C>> FSMBuilder<T> addTransition(
@@ -32,26 +33,22 @@ public class FSMBuilder<T> {
             List<BiPredicate<C, T>> predicates,
             BiFunction<C, T, T> processor
     ) {
-        var newTransition = new SimpleTransition<>(List.copyOf(predicates), List.of(processor), Collections.emptyList());
-        var previousTransition = ctx.put(action, newTransition);
-        if (previousTransition == null) {
-            return this;
-        } else {
-            throw new ActionAlreadyRegisteredException(action, previousTransition, newTransition);
-        }
+        return addTransition(action, predicates, Collections.singletonList(processor), Collections.emptyList());
     }
 
     public <C, A extends Action<C>> FSMBuilder<T> addTransition(
             Class<? extends A> action,
             BiFunction<C, T, T> processor
     ) {
-        var newTransition = new SimpleTransition<>(List.of(), List.of(processor), List.of());
-        var previousTransition = ctx.put(action, newTransition);
-        if (previousTransition == null) {
-            return this;
-        } else {
-            throw new ActionAlreadyRegisteredException(action, previousTransition, newTransition);
-        }
+        return addTransition(action, Collections.emptyList(), Collections.singletonList(processor), Collections.emptyList());
+    }
+
+    public <C, A extends Action<C>> FSMBuilder<T> addTransition(
+            Class<? extends A> action,
+            BiFunction<C, T, T> processor,
+            Consumer<T> postprocessor
+    ) {
+        return addTransition(action, Collections.emptyList(), Collections.singletonList(processor), Collections.singletonList(postprocessor));
     }
 
     public <C, A extends Action<C>> FSMBuilder<T> addTransition(
@@ -60,7 +57,16 @@ public class FSMBuilder<T> {
             BiFunction<C, T, T> processor,
             List<Consumer<T>> postprocessors
     ) {
-        var newTransition = new SimpleTransition<>(List.copyOf(predicates), List.of(processor), List.copyOf(postprocessors));
+        return addTransition(action, predicates, Collections.singletonList(processor), postprocessors);
+    }
+
+    public <C, A extends Action<C>> FSMBuilder<T> addTransition(
+            Class<? extends A> action,
+            List<BiPredicate<C, T>> predicates,
+            List<BiFunction<C, T, T>> processors,
+            List<Consumer<T>> postprocessors
+    ) {
+        var newTransition = new SimpleTransition<>(predicates, processors, postprocessors);
         var previousTransition = ctx.put(action, newTransition);
         if (previousTransition == null) {
             return this;
@@ -71,5 +77,12 @@ public class FSMBuilder<T> {
 
     public FSM<T> build() {
         return new SimpleFSM<>(Map.copyOf(this.ctx));
+    }
+
+    @Override
+    public String toString() {
+        return new StringJoiner(", ", FSMBuilder.class.getSimpleName() + "[", "]")
+                .add("ctx=" + ctx)
+                .toString();
     }
 }
